--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==1.28.1
-pandas==2.1.3
-openpyxl==3.11.0
-plotly==5.18.0
-numpy==1.24.3
+streamlit>=1.28.0
+pandas>=2.0.0
+openpyxl>=3.10.0
+plotly>=5.14.0
+numpy>=1.24.0
